--- a/'Sieć Kin'/Readme
+++ b/'Sieć Kin'/Readme
@@ -1,1 +1,24 @@
+Database 'Sieć Kin'
+Witaj w projekcie "Database Sieć Kin"! Ten projekt powstał w ramach nauki i ćwiczeń z języka SQL. W folderze "Sieć kin" znajdziesz komendy SQL związane z tworzeniem nowej bazy danych dotyczącej sieci kin w Krakowie. Zadaniem tego projektu było wykorzystanie różnorodnych komend SQL do manipulacji danymi, obejmując tworzenie, dodawanie, usuwanie oraz edycję rekordów w PostgreSQL.
 
+Struktura Bazy Danych "Sieć kin"
+Baza danych obejmuje informacje o filmach, salach kinowych, seansach, klientach oraz pracownikach związanych z siecią kin. Każde zdjęcie w repozytorium jest starannie zatytułowane w odniesieniu do użytej komendy SQL, co ułatwia identyfikację operacji na danych.
+
+Zawartość Foldera "Sieć kin"
+W folderze "Sieć kin" znajdziesz dwa rodzaje plików, które prezentują proces tworzenia i edycji bazy danych sieci kin:
+
+PDF Zrzut Ekranu z Poleceniem SQL Pliki w formacie PDF zawierają zrzuty ekranu prezentujące konkretne polecenie SQL wraz z efektem jego wykonania w programie. To świetne narzędzie wizualizacyjne, które pomaga zobaczyć, jakie zmiany wprowadza dana komenda.
+Pliki SQL z Kodem Źródłowym Pliki w formacie SQL zawierają wyłącznie kod źródłowy komendy, bez elementów graficznych. To idealne miejsce do sprawdzenia samego kodu, analizy struktury zapytania SQL i jego logicznego układu.
+Oba rodzaje plików są dostępne, aby zaspokoić różne preferencje użytkowników: jeśli wolisz wizualny podgląd, skorzystaj z plików PDF; jeśli wolisz analizować sam kod, skorzystaj z plików SQL. Oba formaty są dostępne dla pełnej elastyczności w korzystaniu z zasobów projektu.
+
+Jak Znaleźć Interesujące Cię Informacje
+Aby lepiej zrozumieć projekt, rozpocznij od odpowiedniego folderu:
+
+"Sieć kin": Zawiera komendy do tworzenia nowej bazy danych oraz pliki PDF z poleceniami SQL.
+
+Projekt został stworzony w oparciu o PostgreSQL, silne systemy zarządzania bazą danych, które oferują zaawansowane funkcje SQL.
+
+Wsparcie i Wkład
+Jeśli masz pytania, sugestie lub chcesz się podzielić swoim wkładem, śmiało twórz nowe problemy (issues) lub przesyłaj zapytania o łączenie zmian (pull requests).
+
+Dziękuję za zainteresowanie moim projektem! Mam nadzieję, że będzie on użyteczny w Twojej nauce związanej z bazami danych.
